--- a/plugin/pkg/auth/authorizer/rbac/bootstrappolicy/testdata/cluster-roles.yaml
+++ b/plugin/pkg/auth/authorizer/rbac/bootstrappolicy/testdata/cluster-roles.yaml
@@ -992,9 +992,9 @@ items:
     verbs:
     - create
   - apiGroups:
-    - storage.k8s.io
+    - extensions
     resources:
-    - volumeattachments
+    - daemonsets
     verbs:
     - get
   - apiGroups:
@@ -1033,6 +1033,12 @@ items:
     - get
     - list
     - watch
+  - apiGroups:
+    - storage.k8s.io
+    resources:
+    - volumeattachments
+    verbs:
+    - get
 - apiVersion: rbac.authorization.k8s.io/v1
   kind: ClusterRole
   metadata:
